<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MVP_Frame</string>
    <string name="user_login_title">登录</string>
    <string name="user_registered_title">注册</string>
    <string name="update_apk">更新apk</string>
    <string name="user_login_account_hint">用户名</string>
    <string name="user_login_password_hint">密码</string>
    <string name="user_login_account_input_hint">请输入账号</string>
    <string name="user_login_password_input_hint">请输入密码</string>
    <string name="user_login_request_success_hint">登录成功</string>
    <string name="update_hint_text1">对话框更新</string>
    <string name="update_hint_text2">app更新</string>
    <string name="update_apk_title">更新应用</string>

    <string name="update_apk_content_hint">当前版本不再维护，请下载最新版</string>
    <string name="update_apk_button_hint">立即更新</string>
    <string name="update_apk_toasts">正在下载懒猫V%1$s</string>
    <string name="update_apk_dialog_hint">app已有新版本，去设置中心更新</string>
    <string name="update_apk_newest_version">已是最新版本</string>


    <!--user regiest-->
    <string name="regiest_name_hint">账户名</string>
    <string name="regiest_code_hint">验证码</string>
    <string name="regiest_password_hint">密码</string>
    <string name="regiest_input_hint">手机号/邮箱</string>

    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>


    <!-- Dialog info -->
    <string name="no_sensor_dialog_title">无指纹传感器</string>
    <string name="no_sensor_dialog_message">设备上没有指纹传感器，请点击取消</string>
    <string name="no_fingerprint_enrolled_dialog_title">无录入指纹</string>
    <string name="no_fingerprint_enrolled_dialog_message">No fingerprint enrolled, enter\n
        <font fgcolor="green">Setting->Security->Nexus Imprint\n</font>
        to enrollor click cancel to exit.</string>
    <string name="ok_btn_dialog">确定</string>
    <string name="cancel_btn_dialog">取消</string>

    <string name="fingerprint_success">指纹识别</string>
    <string name="fingerprint_not_recognized">指纹识别不了，请再试一次</string>

    <string name="AcquiredGood_warning">The image acquired was good.</string>
    <string name="AcquiredImageDirty_warning">由于怀疑或检测到传感器上的污垢，他的指纹图像太嘈杂。
         例如，在多个AcquiredInsufficient或之后返回此项是合理的实际检测传感器上的污垢（卡住像素，条纹等）。
         当返回时，用户将采取行动清洁传感器。</string>
    <string name="AcquiredInsufficient_warning">由于检测到的条件（即皮肤干燥）或可能脏的传感器，指纹图像太嘈杂。</string>
    <string name="AcquiredPartial_warning">只有部分指纹图像被检测到。在注册过程中，应通知用户需要解决的问题，例如“按压传感器”。</string>
    <string name="AcquiredTooFast_warning">由于快速运动，指纹图像不完整。 虽然主要适用于线性阵列传感器，但如果在采集期间手指被移动，也可能发生这种情况。
        应该要求用户将手指移动较慢（线性）或将手指放在传感器上。</string>
    <string name="AcquiredToSlow_warning">指纹图像由于缺少运动而无法读取。这对于需要滑动运动的线性阵列传感器来说最为合适。</string>
    <string name="ErrorCanceled_warning">由于指纹传感器不可用，操作被取消。 例如，当用户切换，设备被锁定或者另一个挂起的操作阻止或禁用它时，可能会发生这种情况。</string>
    <string name="ErrorHwUnavailable_warning">硬件不可用。 稍后再试。</string>
    <string name="ErrorLockout_warning">由于尝试次数过多，API被锁定，操作被取消。</string>
    <string name="ErrorNoSpace_warning">返回错误状态，如注册等操作; 操作无法完成，因为剩余的存储空间不足以完成操作。</string>
    <string name="ErrorTimeout_warning">当前请求运行时间过长时返回的错误状态。这是为了防止程序无限期地等待指纹传感器。超时是平台和传感器特定的，但通常约为30秒。</string>
    <string name="ErrorUnableToProcess_warning">当传感器无法处理当前图像时返回错误状态。</string>
    <string name="title_activity_guide_pages">GuidePagesActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>


    <string name="scan_qr_code">recognize qr code</string>
    <string name="save_image">save to gallery</string>
    <string-array name="big_image_ops">
        <item>@string/scan_qr_code</item>
        <item>@string/save_image</item>
    </string-array>

    <string name="scale_center_crop">centerCrop</string>
    <string name="scale_center_inside">centerInside</string>
    <string name="scale_auto">auto</string>
    <string-array name="init_scale_type">
        <item>@string/scale_center_crop</item>
        <item>@string/scale_center_inside</item>
        <item>@string/scale_auto</item>
    </string-array>

    <string name="size_small">small</string>
    <string name="size_medium">medium</string>
    <string name="size_big">big</string>
    <string-array name="image_size">
        <item>@string/size_small</item>
        <item>@string/size_medium</item>
        <item>@string/size_big</item>
    </string-array>
</resources>
