<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data></data>

    <RelativeLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/user_login_title"
            android:layout_width="match_parent"
            android:layout_height="110px"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/user_login_title"
            android:textColor="@color/color_2c3e50"
            android:textSize="@dimen/text_15" />

        <TextView
            android:id="@+id/user_login_accout"
            android:layout_width="wrap_content"
            android:layout_height="98px"
            android:layout_below="@+id/user_login_title"
            android:layout_marginTop="20px"
            android:background="@color/white"
            android:gravity="center"
            android:paddingLeft="25px"
            android:paddingRight="25px"
            android:text="@string/user_login_account_hint"
            android:textSize="@dimen/text_15" />

        <EditText
            android:id="@+id/user_login_input_account"
            android:layout_width="match_parent"
            android:layout_height="98px"
            android:layout_below="@+id/user_login_title"
            android:layout_marginTop="20px"
            android:layout_toRightOf="@+id/user_login_accout"
            android:background="@color/white"
            android:hint="@string/user_login_account_input_hint"
            android:text="18503006254"
            android:textColor="@color/color_2c3e50"
            android:textSize="@dimen/text_15" />

        <TextView
            android:id="@+id/user_login_password"
            android:layout_width="wrap_content"
            android:layout_height="98px"
            android:layout_below="@+id/user_login_accout"
            android:layout_marginTop="3px"
            android:background="@color/white"
            android:gravity="center"
            android:paddingLeft="25px"
            android:paddingRight="25px"
            android:text="@string/user_login_password_hint"
            android:textSize="@dimen/text_15" />

        <EditText
            android:id="@+id/user_login_input_password"
            android:layout_width="match_parent"
            android:layout_height="98px"
            android:layout_below="@+id/user_login_accout"
            android:layout_marginTop="3px"
            android:layout_toRightOf="@+id/user_login_password"
            android:background="@color/white"
            android:hint="@string/user_login_password_input_hint"
            android:inputType="textPassword"
            android:text="qqqqqq"
            android:textColor="@color/color_2c3e50"
            android:textSize="@dimen/text_15" />

        <TextView
            android:id="@+id/user_login_button"
            android:layout_width="match_parent"
            android:layout_height="80px"
            android:layout_below="@+id/user_login_input_password"
            android:layout_marginLeft="25px"
            android:layout_marginRight="25px"
            android:layout_marginTop="50px"
            android:background="@drawable/bg_ff7200"
            android:gravity="center"
            android:text="@string/user_login_title"
            android:textColor="@color/white"
            android:textSize="@dimen/text_17" />
    </RelativeLayout>
</layout>